// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button.tsx > should render properly 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with Icon 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe"
  >
    <svg
      class="_icon_2be8fc _primary_2be8fc _icon_2a1efe"
      fill="none"
      viewBox="-1 -3 18 18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 5.917 5.724 10.5 15 1.5"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="3"
      />
    </svg>
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with SIZE > large 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _large_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with SIZE > medium 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with SIZE > small 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _small_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with TYPE > default 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with TYPE > primary 1`] = `
<div>
  <button
    class="_button_2a1efe _primary_2a1efe _medium_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with TYPE > secondary 1`] = `
<div>
  <button
    class="_button_2a1efe _secondary_2a1efe _medium_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with TYPE > tertiary 1`] = `
<div>
  <button
    class="_button_2a1efe _tertiary_2a1efe _medium_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with children over label 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe"
  >
    Test children
  </button>
</div>
`;

exports[`Button.tsx > should render with className 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe mock_test_class_name"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with disabled 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe"
    disabled=""
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;

exports[`Button.tsx > should render with isRound 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe _only_icon_2a1efe"
    title="Test button"
  />
</div>
`;

exports[`Button.tsx > should render with stretch 1`] = `
<div>
  <button
    class="_button_2a1efe _default_2a1efe _medium_2a1efe _stretch_2a1efe"
  >
    <span>
      Test button
    </span>
  </button>
</div>
`;
